--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,28 @@
 .Board {
     background-color: aquamarine;
+    margin-left: 7vw;
+    margin-right: 7vw;
+}
+.Title {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+.Options {
+    margin: 1vh;
+    margin-bottom: 1vh;
+}
+.GuessButton {
+    background-color: teal;
+    border-radius: 10px;
+    padding: 6px;
+    color: whitesmoke;
+}
+.NewGame {
+    background-color: teal;
+    border-radius: 10px;
+    padding: 6px;
+    color: whitesmoke;
+    margin-top: 2vh;
 }
