--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap");
 .Board {
     background-color: aquamarine;
     margin-left: 7vw;
@@ -8,6 +9,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    font-family: "Cinzel", serif;
 }
 .Options {
     margin: 1vh;
